<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_large"
                android:src="@drawable/ic_sweet"
                android:tint="@color/colorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/loginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/store_name"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/email_label"
                style="@style/EditTextTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_x_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:text="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginTitle" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email_field"
                style="@style/EditTextFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_x_small"
                android:hint="@string/email_hint"
                app:layout_constraintEnd_toEndOf="@id/email_label"
                app:layout_constraintStart_toStartOf="@id/email_label"
                app:layout_constraintTop_toBottomOf="@+id/email_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/password_label"
                style="@style/EditTextTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_regular"
                android:text="@string/password"
                app:layout_constraintEnd_toEndOf="@id/email_label"
                app:layout_constraintStart_toStartOf="@id/email_label"
                app:layout_constraintTop_toBottomOf="@id/email_field" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password_field"
                style="@style/EditTextFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_x_small"
                android:hint="@string/password_hint"
                app:layout_constraintEnd_toEndOf="@id/password_label"
                app:layout_constraintStart_toStartOf="@id/password_label"
                app:layout_constraintTop_toBottomOf="@id/password_label" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/already_have_account_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_x_large"
                android:background="@drawable/background_primary_rounded"
                android:text="@string/already_have_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_field" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/create_new_account_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_regular"
                android:layout_marginBottom="@dimen/margin_x_large"
                android:background="@drawable/background_secondary_rounded"
                android:text="@string/create_a_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/already_have_account_button"
                app:layout_constraintStart_toStartOf="@id/already_have_account_button"
                app:layout_constraintTop_toBottomOf="@id/already_have_account_button"
                app:layout_constraintVertical_bias="0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>