<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/candy_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_large"
                android:src="@drawable/ic_sweet"
                android:tint="@color/colorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/instructions_title"
                style="@style/EditTextTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_x_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:lineSpacingExtra="4dp"
                android:text="Please read the following instructions:"
                app:layout_constraintEnd_toStartOf="@id/candy_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/candy_image" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/instructions_step_1"
                style="@style/RegularTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_x_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:text="@string/instructions_text_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/instructions_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/instructions_step_2"
                style="@style/RegularTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_x_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:text="@string/instructions_text_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/instructions_step_1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/instructions_step_3"
                style="@style/RegularTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_x_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:text="@string/instructions_text_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/instructions_step_2" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/shoes_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_x_large"
                android:layout_marginBottom="@dimen/margin_x_large"
                android:background="@drawable/background_primary_rounded"
                android:text="Take me to the shoes!"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/instructions_step_3"
                app:layout_constraintVertical_bias="0" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>





</layout>